--- a/CSS/all.css
+++ b/CSS/all.css
@@ -95,9 +95,9 @@ p {
     letter-spacing: .1rem;
 }
 
+
 .header {
     background: radial-gradient(rgb(80, 76, 76),black);
-    position: fixed;
     width: 100%;
 }
 
@@ -299,7 +299,7 @@ h4 {
 }
 
 .offer {
-    background: linear-gradient(#eec0c6, #7ee8fa) no-repeat;;
+    background: linear-gradient(#eec0c6, #7ee8fa) no-repeat;
     margin-top: 30px;
     padding: 30px 0;
 }
@@ -674,6 +674,117 @@ ul {
     margin-left: 20px;
     color: white;
     display: none;
+}
+
+.all {
+    background: linear-gradient(#eec0c6, #7ee8fa) no-repeat;
+    width: 100%;
+    height: 100%;
+}
+
+.me-container .row { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 360px;
+    height: 540px;
+    border-radius: 24px;
+    background-color: white;
+    box-shadow: 0px -1px 20px 0px darkgray;
+    margin-top: 40px;
+}
+
+form .txt_field{
+  position: relative;
+  border-bottom: 2px solid #000000;
+  margin: 30px 0;
+  margin-top: 40px;
+}
+
+.txt_field input{
+  width: 100%;
+  padding: 0 5px;
+  height: 40px;
+  font-size: 16px;
+  border: none;
+  background: none;
+  outline: none;
+}
+
+.txt_field label{
+  position: absolute;
+  top: 50%;
+  left: 5px;
+  color: #808080;
+  transform: translateY(-50%);
+  font-size: 16px;
+  pointer-events: none;
+  transition: .5s;
+  font-family: cursive;
+}
+
+.txt_field span::before{
+  content: '';
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 0%;
+  height: 2px;
+  background: linear-gradient(120deg, #708090, #C0C0C0);
+  transition: .5s;
+}
+
+.txt_field input:focus ~ label,
+.txt_field input:valid ~ label{
+  top: -5px;
+  color: black;
+}
+
+.txt_field input:focus ~ span::before,
+.txt_field input:valid ~ span::before{
+  width: 100%;
+}
+
+.button-1{
+  display: block;
+  width: 100%;
+  height: 50px;
+  margin-top: 30px;
+  margin-bottom: -10px;
+  border: none;
+  background: linear-gradient(120deg, grey, silver, LightSlateGray);
+  background-size: 200%;
+  font-size: 18px;
+  color: #000000;
+  font-weight: 200;
+  cursor: pointer;
+  border-radius: 25px;
+  outline: none;
+  font-family: cursive;
+  transition: .5s;
+}
+
+.button-1:hover{
+    background-position: right;
+}
+
+.sign{
+    margin: 30px 0;
+    text-align: center;
+    color: black; 
+    font-family: cursive;
+    font-size:oblique;
+    font-size: 16px;
+}
+
+.sign a{
+    color: #2691d9;
+    text-decoration: none;
+}
+
+.sign a:hover{
+    text-decoration: underline;
 }
 
 
