--- a/CSS/all.css
+++ b/CSS/all.css
@@ -80,7 +80,7 @@ p {
 
 .cart-button {
     display: inline-block;
-    background: white;
+    background: linear-gradient(#a2d2ff, #FEEAFA);
     color: black;
     padding: 8px 30px;
     margin: 30px 0;
@@ -90,8 +90,8 @@ p {
 }
 
 .cart-button:hover {
-    background: rgb(176, 200, 250);
-    color: rgb(255, 255, 255);
+    background: linear-gradient( #FEEAFA, #a2d2ff);
+    color: rgb(90, 89, 89);
     letter-spacing: .1rem;
 }
 
@@ -152,12 +152,20 @@ p {
 }
 
 .top {
-    background-color: rgb(0, 0, 0);
+    background: linear-gradient(240deg,#a2d2ff, #FEEAFA);
     padding-left: 350px;
 }
 
 .top .containers {
     padding-top: 0px;
+}
+
+.top h2 {
+    color: #000000;
+}
+
+.top p {
+    color: #000;
 }
 
 .counter-container span:not(.animation-counter) {
@@ -171,7 +179,7 @@ p {
 .counter-container span {
     user-select: none;
     position: absolute;
-    background: white;
+    background: rgb(0, 0, 0);
     color: black;
     width: 15px;
     height: 15px;
@@ -221,6 +229,24 @@ p {
     color: white;
 }
 
+.col-4 .detail-button {
+    display: inline-block;
+    background: linear-gradient(240deg, #a2d2ff, #FEEAFA);
+    color: rgb(0, 0, 0);
+    padding: 8px 30px;
+    margin: 0px 0;
+    border-radius: 30px;
+    letter-spacing: 0.1rem;
+    transition: 0.5s; 
+    font-weight: bold;
+}
+
+.col-4 .detail-button:hover {
+    background: linear-gradient(240deg, #FEEAFA, #a2d2ff);
+    color: rgb(0, 0, 0);
+    letter-spacing: .1rem;
+}
+
 .categories {
     margin: 70px 0;
 }
@@ -242,6 +268,7 @@ p {
     padding-right: 25px;
 }
 
+
 .small-container .title::after {
     display: none;
 }
@@ -257,6 +284,7 @@ p {
 
 .col-4 img {
     width: 100%;
+    height: 210px;
 }
 
 .col-4 p {
@@ -301,7 +329,7 @@ h4 {
 }
 
 .offer {
-    background: linear-gradient(#eec0c6, #7ee8fa) no-repeat;
+    background: linear-gradient(240deg, #a2d2ff, #FEEAFA);
     margin-top: 30px;
     padding: 30px 0;
 }
@@ -342,7 +370,7 @@ small {
 }
 
 .testimonial .col-3 img {
-    width: 50px;
+    width: 80px;
     margin-top: 20px;
     border-radius: 50% 50% 50% 0%;
     border: 0.2rem solid #65A5C7;
@@ -350,7 +378,8 @@ small {
 
 .testimonial p {
     color: rgb(0, 0, 0);
-    font-size: 12px;
+    font-size: 15px;
+    font-weight: bold;
     margin: 12px 0;
 }
 
@@ -435,20 +464,21 @@ input:focus {
 
 .single-product .cart-button {
     display: inline-block;
-    background: rgb(0, 0, 0);
-    color: rgb(255, 255, 255);
+    background: linear-gradient(120,#a2d2ff, #FEEAFA);
+    color: rgb(0, 0, 0);
     padding: 8px 30px;
     margin: 10px auto 10px;
     margin-left: 1px;
     border-radius: 30px;
+    border: white;
     letter-spacing: 0.1rem;
     transition: 0.5s; 
     font-weight: bold;
 }
 
 .single-product .cart-button:hover {
-    background: rgb(160, 228, 255);
-    color: rgb(0, 0, 0);
+    background: linear-gradient(120,#FEEAFA, #a2d2ff);
+    color: rgb(88, 88, 88);
     letter-spacing: .1rem;
 }
 
@@ -679,7 +709,7 @@ ul {
 }
 
 .all {
-    background: linear-gradient(#eec0c6, #7ee8fa) no-repeat;
+    background: linear-gradient(240deg, #a2d2ff, #FEEAFA);
     width: 100%;
     height: 100%;
 }
@@ -755,7 +785,7 @@ form .txt_field{
   margin-top: 30px;
   margin-bottom: -10px;
   border: none;
-  background: linear-gradient(120deg, grey, silver, LightSlateGray);
+  background: linear-gradient(120deg, #eec0c6, rgb(206, 191, 240), #7ee8fa);
   background-size: 200%;
   font-size: 18px;
   color: #000000;
